Compila-Bob/Compilabob.java
/* Generated By:JavaCC: Do not edit this line. Compilabob.java */
import java.io.*;
import java.util.ArrayList;

public class Compilabob implements CompilabobConstants {
        String errormsg="",datos = "";
        int sentencias_inco =0;
        //variebales para semantica-------------------------------
    String Type="", Valor=""; //variables cache para capturar el par
    String lugar = "";
        Token var;
    //--------------------------------------------------------
        public static void main(String args[])  {
                Compilabob compilador = new Compilabob(System.in);
                try {
                        compilador.Codigo();
                }catch( Exception e ){
                        System.out.println("\nEXCEPTION e MAIN\n" +"Sentencias incorrectas encontradas: "+compilador.sentencias_inco);
                }
                catch( TokenMgrError e ) {
                        System.out.println( "Error de Token" );
                }
                if(compilador.errormsg == "" && compilador.sentencias_inco == 0){
                        System.out.println("Compilador ejecutado con "+"\u00e9"+"xito");
                }else{
                        System.out.println(compilador.errormsg);
                }
                System.out.println("Sentencias incorrectas encontradas: "+compilador.sentencias_inco);
                System.out.println("----- Tabla hash ----"+ ClaseSemantica.tabla);
                for(int i = 0; i < Expresiones.tokensValue.size(); i++) {
            System.out.println(Expresiones.tokensValue.get(i).toString());
        }
        }

//------------------------------- ANÁLISIS SINTACTICO - AREA DE GRAMATICAS ----------------------------------------------------

// Gramatica inicial que contiene el cuerpo basico del codigo
  final public void Codigo() throws ParseException {
        ClaseSemantica.SetTables();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INICIO:
      jj_consume_token(INICIO);
      break;
    default:
      jj_la1[0] = jj_gen;
      ErrorNoinicio();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SepIzq:
      jj_consume_token(SepIzq);
      break;
    default:
      jj_la1[1] = jj_gen;
      ErrorNoSepINICIO();
    }
    Cuerpo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SepDer:
      jj_consume_token(SepDer);
      break;
    default:
      jj_la1[2] = jj_gen;
      ErrorNoSepFINAL();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FIN:
      jj_consume_token(FIN);
      break;
    default:
      jj_la1[3] = jj_gen;
      ErrorNOFIN();
    }
    jj_consume_token(0);
  }

// método cuerpo, lee un conjunto de sentencias tamaño n
  final public void Cuerpo() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      sentencias();
    }
  }

// metodo sentencias, lee todas las gramaticas que pueden ser reconocidas por el compilador
  final public void sentencias() throws ParseException {
    try {
      if (jj_2_1(2)) {
        Declaracion();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          Asignacion();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PuntoComa:
            jj_consume_token(PuntoComa);
            break;
          default:
            jj_la1[5] = jj_gen;
            errorFinlinea();
          }
          break;
        case CicloIterado:
          Ciclo_RepitoHastaQue();
          break;
        case CicloLimit:
          Ciclo_RepitoMientras();
          break;
        case IF:
          Decide();
          break;
        case ESCRIBIR:
          Muestra();
          break;
        case UNKNOW:
          error();
          break;
        case PuntoComa:
          errorDOBLElinea();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
        System.out.println(e.toString());  //imprime el mensaje de error
        System.out.println("ESTE ES EL TOKEN ALV "+token.kind);
    error_skipto(PuntoComa, FIN, EOF);
    }
  }

  final public void Muestra() throws ParseException {
    jj_consume_token(ESCRIBIR);
    jj_consume_token(ParenIzq);
    Mensaje();
    jj_consume_token(ParenDer);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
      break;
    default:
      jj_la1[7] = jj_gen;
      errorFinlinea();
    }
  }

  final public void Mensaje() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENAS:
    case IDENTIFICADOR:
      Concatenacion();
      break;
    default:
      jj_la1[8] = jj_gen;

    }
  }

  final public void Concatenacion() throws ParseException {
    if (jj_2_2(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
        break;
      case CADENAS:
        jj_consume_token(CADENAS);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(MAS);
      Concatenacion();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CADENAS:
      case IDENTIFICADOR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          jj_consume_token(IDENTIFICADOR);
          break;
        case CADENAS:
          jj_consume_token(CADENAS);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

//########  DECIDE IF-ELSE ##########
  final public void Decide() throws ParseException {
    IF();
    if (jj_2_3(2)) {
      ELSE();
    } else {

    }
  }

  final public void IF() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(ParenIzq);
    OpComparacion();
    jj_consume_token(ParenDer);
    jj_consume_token(ASIGNACION);
    jj_consume_token(SepIzq);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_2;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
  }

  final public void ELSE() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(SepIzq);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_3;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
      break;
    default:
      jj_la1[14] = jj_gen;
      errorFinlinea();
    }
  }

// ############## CICLOS #############
  final public void Ciclo_RepitoHastaQue() throws ParseException {
    jj_consume_token(CicloIterado);
    jj_consume_token(ParenIzq);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(COMA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      break;
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
      DataType();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(ParenDer);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
      jj_consume_token(ASIGNACION);
      break;
    default:
      jj_la1[16] = jj_gen;
      ErrorNoAsignacion();
    }
    jj_consume_token(SepIzq);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_4;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
      break;
    default:
      jj_la1[18] = jj_gen;
      errorFinlinea();
    }
  }

  final public void Ciclo_RepitoMientras() throws ParseException {
    jj_consume_token(CicloLimit);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
      jj_consume_token(ASIGNACION);
      break;
    default:
      jj_la1[19] = jj_gen;
      ErrorNoAsignacion();
    }
    jj_consume_token(SepIzq);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_5;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
    jj_consume_token(CicloWhile);
    jj_consume_token(ParenIzq);
    OpComparacion();
    jj_consume_token(ParenDer);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
      break;
    default:
      jj_la1[21] = jj_gen;
      errorFinlinea();
    }
  }

// DECLARACION DE VARIABLES 
  final public void Declaracion() throws ParseException {
        int td;
    Variable_dato();
        td = token.kind;
    var = jj_consume_token(IDENTIFICADOR);
        if(ClaseSemantica.checkVariable(var).equals("")){
                errormsg = errormsg+"Error sem\u00e1ntico en la l\u00ednea " +var.beginLine +", columna "+var.beginColumn +", la variable "+ var.image + " ya  ha sido declarada \r\n";
                sentencias_inco++;
                Expresiones.tokensValue.remove((Expresiones.tokensValue.size()-1));
        }else{
                ClaseSemantica.InsertarSimbolo(var,td);
                System.out.println("Esta es la image "+token.image);
                Expresiones.tokensValue.add(token.image);
        }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
      jj_consume_token(ASIGNACION);
                 Expresiones.tokensValue.add(token.image);
      AsignacionD();
      break;
    default:
      jj_la1[22] = jj_gen;

    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
                                                                                             Expresiones.tokensValue.add(token.image);
      break;
    default:
      jj_la1[23] = jj_gen;
      errorFinlinea();
    }
  }

// ASIGNACION DE VALORES DESPUES DE UNA DECLARACION
  final public void AsignacionD() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEER:
      jj_consume_token(LEER);
                  Expresiones.tokensValue.add(token.image);
      break;
    case ParenIzq:
    case MENOS:
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
    case IDENTIFICADOR:
      Expresion();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// ASIGNACION GENERAL DE VALORES A UNA VARIABLE
  final public void Asignacion() throws ParseException {
        Token t2;
    var = jj_consume_token(IDENTIFICADOR);
        if(!(ClaseSemantica.checkVariable(var).equals(""))){
                errormsg = errormsg+ClaseSemantica.checkVariable(var);
                sentencias_inco++;
                Expresiones.tokensValue.remove((Expresiones.tokensValue.size()-1));
        }else{
                Expresiones.tokensValue.add(token.image);
        }
    jj_consume_token(ASIGNACION);
                  Expresiones.tokensValue.add(token.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEER:
      jj_consume_token(LEER);
      break;
    case ParenIzq:
    case MENOS:
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
    case IDENTIFICADOR:
      Expresion();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                t2 = token;

                if(!(ClaseSemantica.checkAsing(var,t2).equals(" "))){
                        errormsg = errormsg+ClaseSemantica.checkAsing(var,t2);
                        sentencias_inco++;
                        Expresiones.tokensValue.remove((Expresiones.tokensValue.size()-1));
                }
  }

//###### GRAMATICA PARA EXPRESIONES MATEMATICAS DESPUES DE UNA ASIGNACION O DECLARACION
  final public void Expresion() throws ParseException {
    Termino();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAS:
      case MENOS:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAS:
        jj_consume_token(MAS);
        break;
      case MENOS:
        jj_consume_token(MENOS);
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                   Expresiones.tokensValue.add(token.image);
      Termino();
    }
  }

// Epsilon  ---> | {}
  final public void Termino() throws ParseException {
    Factor();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIV:
      case MODULO:
      case MULTI:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTI:
        jj_consume_token(MULTI);
        break;
      case DIV:
        jj_consume_token(DIV);
        break;
      case MODULO:
        jj_consume_token(MODULO);
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                           Expresiones.tokensValue.add(token.image);
      Factor();
    }
  }

  final public void Factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MENOS:
      jj_consume_token(MENOS);
                 Expresiones.tokensValue.add(token.image);
      Factor();
      break;
    case ParenIzq:
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
    case IDENTIFICADOR:
      Primario();
      break;
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Primario() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ParenIzq:
      jj_consume_token(ParenIzq);
                     Expresiones.tokensValue.add(token.image);
      Expresion();
      jj_consume_token(ParenDer);
                                                                                       Expresiones.tokensValue.add(token.image);
      break;
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
      DataType();
      break;
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
                                                                                                                                                                    Expresiones.tokensValue.add(token.image);
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// ############## OPERACIONES DE COMPARACION PARA IF O CICLOS  ####################
  final public void OpComparacion() throws ParseException {
    ExpresionL();
    Comparadores();
    ExpresionL();
  }

  final public void ExpresionL() throws ParseException {
    if (jj_2_4(2)) {
      FactorL();
      Logicos();
      ExpresionL();
    } else {
      FactorL();
    }
  }

  final public void FactorL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
      DataType();
      break;
    default:
      jj_la1[33] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
                                         Expresiones.tokensValue.add(token.image);
        break;
      default:
        jj_la1[32] = jj_gen;
        errorNoIden();
      }
    }
  }

// Epsilon ---> | {}

// DATOS Y OPERADORES USADOS EN SENTENCIAS
  final public void DataType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERO:
      jj_consume_token(NUMERO);
      break;
    case NUMDECIMAL:
      jj_consume_token(NUMDECIMAL);
      break;
    case EST_LOGIC:
      jj_consume_token(EST_LOGIC);
      break;
    case CADENAS:
      jj_consume_token(CADENAS);
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                   Expresiones.tokensValue.add(token.image);
  }
